--- a/apps/governance/src/index.html
+++ b/apps/governance/src/index.html
@@ -27,6 +27,7 @@
     <title>mStable Governance</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="http://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400&family=Poppins:wght@400;500;600&family=Source+Code+Pro:wght@400&display=swap" rel="stylesheet">
   </head>
   <body>
